fix: change sheet component with popup component on mobile

--- a/src/components/FeedHeader/components/Controls/Controls.scss
+++ b/src/components/FeedHeader/components/Controls/Controls.scss
@@ -83,7 +83,7 @@ $block: '.#{$namespace}feed-controls';
                     border-bottom: 2px solid var(--g-color-line-generic);
                     border-bottom-right-radius: 0;
                     border-bottom-left-radius: 0;
-                    width: 100vw;
+                    width: 100%;
                     height: 2px;
                     transform: translateX(-50%);
                 }
